# Qt_Meter_Widget

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/extinguisher/: CMakeLists.txt  main.cpp
examples/license/: CMakeLists.txt  main.cpp
examples/meter/: CMakeLists.txt  main.cpp
include/Widgets/: LicenseDialog
src/: CMakeLists.txt  license_dialog.cpp  license_dialog.hpp  meter.cpp  meter.hpp
